# Parsezilla

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  character_stream_examples.py  core_api_demo.py  diagnostic_reporting_demo.py  integration_patterns.py  performance_benchmark_demo.py  quick_start_guide.py  sample_diagnostic_report.html  sample_diagnostic_report.json  sample_diagnostic_report.text  sample_diagnostic_report.xml  tokenization_api_demo.py  tree_finalization_demo.py
examples/integrations/: flask_xml_api_example.py  migration_helper_example.py  pandas_data_analysis_example.py
examples/templates/: custom_adapter_template.py
src/: main_tester.py  test_well_formed.py
src/ultra_robust_xml_parser/: __init__.py
src/ultra_robust_xml_parser/api/: __init__.py  adapters.py  parser.py
src/ultra_robust_xml_parser/character/: __init__.py  encoding.py  stream.py  transformation.py
src/ultra_robust_xml_parser/cli/: __init__.py  main.py
src/ultra_robust_xml_parser/shared/: __init__.py  config.py  logging.py  result.py
src/ultra_robust_xml_parser/tokenization/: __init__.py  api.py  assembly.py  benchmarks.py  recovery.py  tokenizer.py
src/ultra_robust_xml_parser/tools/: __init__.py  debugging.py  memory.py  profiling.py  security.py  testing.py
src/ultra_robust_xml_parser/tree/: __init__.py  builder.py  validation.py
tests/test_ultra_robust_xml_parser/: test_init.py
tests/test_ultra_robust_xml_parser/test_api/: __init__.py  test_adapters.py  test_parser.py
tests/test_ultra_robust_xml_parser/test_character/: __init__.py  test_encoding.py  test_stream.py  test_stream_performance.py  test_transformation.py
tests/test_ultra_robust_xml_parser/test_cli/: test_main.py
tests/test_ultra_robust_xml_parser/test_shared/: __init__.py  test_config.py
tests/test_ultra_robust_xml_parser/test_tokenization/: __init__.py  test_api.py  test_assembly.py  test_benchmarks.py  test_integration_api.py  test_integration_assembly.py  test_recovery.py  test_tokenizer.py
tests/test_ultra_robust_xml_parser/test_tools/: test_debugging.py  test_memory.py  test_profiling.py  test_security.py  test_testing.py
tests/test_ultra_robust_xml_parser/test_tree/: __init__.py  test_builder.py  test_validation.py
